<resources>
    <string name="app_name">XMS</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="entry">ENTRY</string>
    <string name="exit">EXIT</string>
    <string name="history">HISTORY</string>
    <string name="log_details">LOG DETAILS</string>
    <string name="profile">PROFILE</string>
    <string name="people_in">PEOPLE IN</string>
    <string name="social">SOCIAL</string>
    <string name="user_dashboard">USER DASHBOARD</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_btn">Login_btn</string>
    <string name="signup_btn">SignUp</string>
    <string name="register">Register</string>
    <string name="camera">Camera</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
</resources>